# tauri-plugin-serialport

./: Cargo.toml  README.md  README_zh.md  package.json  pnpm-lock.yaml
.changes/: config.json  initial-release.md  readme.md
.github/workflows/: covector-version-or-publish.yml  test.yml
examples/svelte-app/: package.json  pnpm-lock.yaml
examples/svelte-app/src/: App.svelte
examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-app/src-tauri/src/: main.rs
examples/svelte-app/src/services/: SerialportHandler.ts  utils.ts
src/: command.rs  error.rs  lib.rs  state.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
