[package]
name = "tauri-plugin-serialport"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.57"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.0.2" }
serde = "1.0"
thiserror = "1.0"
serialport = {version = "4.2.0"}
